[tool.poetry]
authors = ["Rostislav Aleev <rs.aleev@gmail.com>"]
description = ""
name = "aio_yatracker"
packages = [{include = "aio_yatracker"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiohttp = {version = "^3.8.4", extras = ["speedups"]}
pydantic = "^1.10.7"
python = "^3.11"
tenacity = "^8.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.10.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
