[tool.poetry]
authors = ["Rostislav Aleev <rs.aleev@gmail.com>"]
description = "Yandex.Tracker client based on aiohttp and Pydantic"
name = "aio_yatracker"
packages = [{include = "aio_yatracker"}]
readme = "README.md"
version = "1.0.0"

[tool.poetry.dependencies]
aiohttp = "^3.8.4"
pydantic = "^1.10.7"
python = "^3.11"

[tool.poetry.group.dev.dependencies]
aioresponses = {git = "https://github.com/rsaleev/aioresponses.git", branch = "master"}
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.10.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

minversion = "7.0"
testpaths = [
  "tests",
]
